CSS Fix: Fix final screen on mobile

--- a/css/layout-small.css
+++ b/css/layout-small.css
@@ -29,7 +29,7 @@ html {
 #main-container {
   width: 346px;
   min-height: 700px;
-  padding: 10px 60px;
+  padding: 10px 10px;
   margin: 5px 0 15px;
 
   box-shadow: var(--main-container-mobile-box-shadow, 8px 8px 2px rgba(0, 0, 0, 0.25)), inset var(--main-container-inset, 0px 4px 4px #FFB2A8);
@@ -44,10 +44,11 @@ html {
 
 #header {
   order: 0;
+  width: 316px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px 0;
+  padding: 5px 12px 5px;
   font-size: var(--header-font-size, 34px);
   line-height: var(--header-line-height, 44px);
 }
@@ -84,6 +85,21 @@ html {
   line-height: var(--message-line-height, 28px);
   font-weight: var(--message-font-weight, 700);
   align-self: center;
+}
+
+#message.finished {
+  display: flex;
+  margin: auto 0 30px;
+  width: 60%;
+  height: max-content;
+  align-items: end;
+}
+
+#section-reload {
+  order: 6;
+  margin: 0;
+  display: flex;
+  align-content: flex-start;
 }
 
 #section-next-btn {
@@ -151,7 +167,7 @@ html {
 }
 
 #section-footer {
-  order: 6;
+  order: 7;
   display: flex;
   justify-content: center;
   align-items: center;
